test/src/e2e_vm_tests/test_programs/should_pass/language/fallback_only/src/main.sw
contract;

use std::execution::run_external;
use std::constants::ZERO_B256;

#[namespace(SRC1822)]
storage {
    target: ContractId = ContractId::from(ZERO_B256),
}

#[fallback]
#[storage(read)]
fn fallback() {
    run_external(storage.target.read())
}
