test/src/e2e_vm_tests/test_programs/should_fail/attributes_invalid_target_items/src/struct_decl.sw
library;

#[storage(invalid)]
#[inline(invalid)]
//! Invalid inner comment.
#[test(invalid)]
#[payable(invalid)]
#[fallback(invalid)]
struct S {
    #[storage(invalid)]
    #[inline(invalid)]
    //! Invalid inner comment.
    #[test(invalid)]
    #[payable(invalid)]
    #[fallback(invalid)]
    field: u8,
}
